@@ -1,5 +1,9 @@
 2003-02-02  Andrew Sobala  <aes@gnome.org>
 
+	* gnome-vfs.keys.in: reverting the string-freeze breaking change
+
+2003-02-02  Andrew Sobala  <aes@gnome.org>
+
 	* gnome-vfs-mime-magic:
 	* gnome-vfs.keys.in:
           add x-gnome-theme and x-gnome-theme-installed
